# MLH-PE-Hackathon

./: .coverage  README.md  database.db  pyproject.toml  run.py  users.csv
.github/workflows/: ci.yml
app/: __init__.py  alerts.py  database.py  utils.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  health.py  metrics.py  prom_metrics.py  url_shortener.py  urls.py  users.py
docs/: API.md  RCA.md  RUNBOOK.md
monitoring/: docker-compose.yml  prometheus.yml
tests/unit/: test_health.py  test_health.py?
