[project]
name = "pe-hackathon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.0",
    "peewee>=3.17",
    "psycopg2-binary>=2.9",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "dbm>=1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--cov=app",
    "--cov-report=xml",
    "--cov-fail-under=50"
]